apps/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
spec:
  type: ExternalName
  externalName: homeassistant.home.arpa.
